--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <div class="watermark">NO ADDICTION</div>
+    <div class="watermark">NO PORN</div>
     <div class="quote" id="quote">Loading...</div>
     <script>
         function fetchAndDisplayQuote() {
